# src/main/java/com/takamol/search/api/SearchApi.java
@@ -1,39 +1,0 @@
-/**
- * NOTE: This class is auto generated by the swagger code generator program (2.4.39).
- * https://github.com/swagger-api/swagger-codegen
- * Do not edit the class manually.
- */
-package com.takamol.search.api;
-
-import com.takamol.search.model.SearchRequest;
-import io.swagger.annotations.*;
-import jakarta.validation.Valid;
-import net.minidev.json.JSONObject;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-
-import java.util.List;
-
-@Validated
-@Api(value = "search", description = "the search API")
-//@RequestMapping(value = "/search")
-public interface SearchApi {
-
-    @ApiOperation(value = "Search entity using elastic search service", nickname = "searchEnity", notes = "Search entity using elastic search service", tags={ "search", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 400, message = "Bad Requesr"),
-        @ApiResponse(code = 405, message = "Validation exception"),
-        @ApiResponse(code = 500, message = "Internal server error"),
-        @ApiResponse(code = 503, message = "Not implemented"),
-        @ApiResponse(code = 200, message = "Success")})
-    @RequestMapping(value = "/search/{entity}",
-        produces = { "application/json" }, 
-        consumes = { "application/json" },
-        method = RequestMethod.POST)
-    ResponseEntity<List<JSONObject>> searchEnity(@ApiParam(value = "",required=true) @PathVariable("entity") String entity, @ApiParam(value = "search Criteria will contain all filters and other criteria to search entity" ,required=true )  @Valid @RequestBody SearchRequest searchCriteria);
-
-}
