# src/main/resources/api-spec.yaml
@@ -1,99 +1,136 @@
-swagger: '2.0'
+openapi: 3.0.1
 info:
-  description: This is an abstraction for entity search service exposed on Elastic Search platform
-  version: 1.0.0
   title: Entity Search Service
-host: localhost
-basePath: /v1
+  description: This is an abstraction for entity search service exposed on Elastic
+    Search platform
+  version: 1.0.0
+
 tags:
   - name: search
     description: This is entity search searvice
-schemes:
-  - https
-  - http
 paths:
   /search/{entity}:
     post:
       tags:
         - search
       summary: Search entity using elastic search service
-      description: Search entity using elastic search service
+      description: Search entity using search service
       operationId: searchEnity
-      consumes:
-        - application/json
-      produces:
-        - application/json
       parameters:
-        - in: path
-          name: entity
-          required: true
-          type: string
-        - in: body
-          name: searchCriteria
-          description: search Criteria will contain all filters and other criteria to search entity
+        - name: entity
+          in: path
           required: true
           schema:
-            $ref: '#/definitions/Criteria'
+            type: string
+      requestBody:
+        description: search Criteria will contain all filters and other criteria to search entity
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Criteria'
+        required: true
       responses:
-        '400':
-          description: Invalid ID supplied
-        '404':
+        "400":
+          description: Bad request
+          content: { application/json: {
+                            schema: {
+                              "$ref": '#/components/schemas/Error'
+                            }
+                       }
+                   }
+        "404":
           description: Entity not found
-        '405':
-          description: Validation exception
-definitions:
-  Criteria:
-    type: object
-    properties:
-      filters:
-        type: array
-        items:
-          "$ref": "#/definitions/Filter"
-      orders:
-        type: array
-        items:
-          "$ref": "#/definitions/Order"
-      size:
-        type: integer
-        default: 20
-      offset:
-        type: integer
-        default: 0
-    required:
-      - filters
-      - orders
-      - size
-      - offset
-  Order:
-    type: object
-    properties:
-      field:
-        type: string
-      asc:
-        type: boolean
-    required:
-      - field
-      - asc
-  Filter:
-    type: object
-    properties:
-      field:
-        type: string
-      operator:
-        type: string
-        enum:
-          - eq
-          - ne
-          - any
-          - gt
-          - gte
-          - lt
-          - lte
-          - between
-          - not_between
-      value:
-        type: string
-    required:
-      - field
-      - operator
-      - value
+          content: { application/json: {
+            schema: {
+              "$ref": '#/components/schemas/Error'
+            }
+          }
+          }
+        "409":
+          description: Validation error
+          content: { application/json: {
+            schema: {
+              "$ref": '#/components/schemas/Error'
+            }
+          }
+          }
+          "500":
+            description: Internal server error
+            content: { application/json: {
+              schema: {
+                "$ref": '#/components/schemas/Error'
+              }
+            }
+            }
+      x-codegen-request-body-name: searchCriteria
+components:
+  schemas:
+    Criteria:
+      required:
+        - filters
+        - offset
+        - orders
+        - size
+      type: object
+      properties:
+        filters:
+          type: array
+          items:
+            $ref: '#/components/schemas/Filter'
+        orders:
+          type: array
+          items:
+            $ref: '#/components/schemas/Order'
+        size:
+          type: integer
+          minimum: 1
+          maximum: 50
+        offset:
+          type: integer
+          minimum: 0
+    Order:
+      required:
+        - asc
+        - field
+      type: object
+      properties:
+        field:
+          type: string
+          nullable: false
+        asc:
+          type: boolean
+    Filter:
+      required:
+        - field
+        - operator
+        - value
+      type: object
+      properties:
+        field:
+          type: string
+          nullable: false
+        operator:
+          type: string
+          enum:
+            - eq
+            - ne
+            - any
+            - gt
+            - gte
+            - lt
+            - lte
+            - between
+            - not_between
+        value:
+          type: string
+    Error:
+      required:
+        - code
+        - message
+      properties:
+        code:
+          type: integer
+          format: int32
+        message:
+          type: string
+x-original-swagger-version: "2.0"
